@@ -1,3 +1,13 @@
+2017-01-25  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Use C99 blanks as default argv separators, per issue [#2329].
+
+	* setargv.c [_ISOC99_SOURCE]: Require it.
+	(__mingw32_setargv): Separate command line arguments based on...
+	[(quoted == 0) && isblank( c )]: ...this condition, instead of on...
+	[(quoted == 0) && isspace( c )]: ...this, so that only blanks, rather
+	than any whitespace characters, serve as default argument separators.
+
 2017-01-10  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Correct <strings.h> preprocessor logic; fix bug [#2322]
